before auto scene adding

--- a/src/js/figure/tests/Figure/space/index.html
+++ b/src/js/figure/tests/Figure/space/index.html
@@ -5,6 +5,6 @@
     </div>
     <script type="text/javascript" src='../../../../../../package/index.js'></script>
     <script type="text/javascript" src='./init.js'></script>
-    <script type="text/javascript" src='./space.js'></script>
+    <script type="text/javascript" src='./index.js'></script>
 </body>
 </html>
