add 3D touch tests

--- a/src/tests/misc/touch/orthographic.html
+++ b/src/tests/misc/touch/orthographic.html
@@ -4,7 +4,7 @@
     <div id="figureOneContainer" style="width: 2000px; height: 2000px; background-color: white;">
     </div>
     <script type="text/javascript" src='../../../../package/index.js'></script>
-    <script type="text/javascript" src='./three.js'></script>
-    <script type="text/javascript" src='./static.js'></script>
+    <script type="text/javascript" src='./layout.js'></script>
+    <script type="text/javascript" src='./orthographic.js'></script>
 </body>
 </html>
