--- a/src/tests/misc/FontManager/index.html
+++ b/src/tests/misc/FontManager/index.html
@@ -6,7 +6,55 @@
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 100;
+    src: url('http://localhost:8080/src/tests/misc/FontManager/fonts/montserrat/montserrat-normal-100-latin.woff2') format('woff2');
+  }
+  @font-face {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 200;
+    src: url('http://localhost:8080/src/tests/misc/FontManager/fonts/montserrat/montserrat-normal-200-latin.woff2') format('woff2');
+  }
+  @font-face {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 300;
+    src: url('http://localhost:8080/src/tests/misc/FontManager/fonts/montserrat/montserrat-normal-300-latin.woff2') format('woff2');
+  }
+  @font-face {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
     src: url('http://localhost:8080/src/tests/misc/FontManager/fonts/montserrat/montserrat-normal-400-latin.woff2') format('woff2');
+  }
+  @font-face {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 500;
+    src: url('http://localhost:8080/src/tests/misc/FontManager/fonts/montserrat/montserrat-normal-500-latin.woff2') format('woff2');
+  }
+  @font-face {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 600;
+    src: url('http://localhost:8080/src/tests/misc/FontManager/fonts/montserrat/montserrat-normal-600-latin.woff2') format('woff2');
+  }
+  @font-face {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 700;
+    src: url('http://localhost:8080/src/tests/misc/FontManager/fonts/montserrat/montserrat-normal-700-latin.woff2') format('woff2');
+  }
+  @font-face {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 800;
+    src: url('http://localhost:8080/src/tests/misc/FontManager/fonts/montserrat/montserrat-normal-800-latin.woff2') format('woff2');
+  }
+  @font-face {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 900;
+    src: url('http://localhost:8080/src/tests/misc/FontManager/fonts/montserrat/montserrat-normal-900-latin.woff2') format('woff2');
   }
   </style> -->
 </head>
