update tests and docs for styles

--- a/src/tests/misc/FontManager/index.html
+++ b/src/tests/misc/FontManager/index.html
@@ -59,9 +59,9 @@
   </style> -->
 </head>
 <body>
-    <div id="figureOneContainer" style="width: 1000px; height: 1000px; background-color: white;">
+    <div id="figureOneContainer" style="width: 500px; height: 500px; background-color: white;">
     </div>
-    <p>This is a test</p>
+    <p style="font-size: 100px; font-family: montserrat">This is a test</p>
     <script type="text/javascript" src='../../../../package/index.js'></script>
     <script type="text/javascript" src='./index.js'></script>
 </body>
