--- a/src/tests/misc/FontManager/index.html
+++ b/src/tests/misc/FontManager/index.html
@@ -2,6 +2,14 @@
 <html>
 <head>
   <!-- <style>
+    @font-face {
+      font-family: 'open sans';
+      font-style: normal;
+      font-weight: 300;
+      src: url('http://localhost:8080/src/tests/misc/FontManager/fonts/open-sans/open-sans-normal-300-greek.woff2') format('woff2');
+    }
+  </style> -->
+  <!-- <style>
   @font-face {
     font-family: 'Montserrat';
     font-style: normal;
@@ -61,7 +69,7 @@
 <body>
     <div id="figureOneContainer" style="width: 500px; height: 500px; background-color: white;">
     </div>
-    <p style="font-size: 100px; font-family: montserrat">This is a test</p>
+    <p style="font-size: 30px; font-family: 'montserrat'">qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM1234567890</p>
     <script type="text/javascript" src='../../../../package/index.js'></script>
     <script type="text/javascript" src='./index.js'></script>
 </body>
