--- a/scratch/simple/index.html
+++ b/scratch/simple/index.html
@@ -3,8 +3,10 @@
 <head>
     <!-- <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i"> -->
-          <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i:greek">
+          <!-- <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i:greek"> -->
+          <!-- <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=montserrat:400"> -->
           <!-- <link rel="stylesheet" href="./style.css"> -->
 </head>
 <body>
@@ -36,7 +38,7 @@
         // console.log('hello')
       </script> -->
     <div id="asdf" style="font-family:open sans; font-size: 30px;">QWERTYUIOPASDFGHJKLZXCVBNMqwertyuiopasdfghjklzxcvbnm</div>
-    <div id="figureOneContainer" style="width: 800px; height: 800px; background-color: white;">
+    <div id="figureOneContainer" style="width: 1800px; height: 800px; background-color: white;">
     <!-- <script type="text/javascript" src='./fontfaceobserver.js'></script>     -->
     <!-- <script>
         var font = new FontFaceObserver('Open Sans');
