--- a/src/tests/collections/text/static-gl.html
+++ b/src/tests/collections/text/static-gl.html
@@ -4,7 +4,7 @@
     <div id="figureOneContainer" style="width: 2000px; height: 2000px; background-color: white;">
     </div>
     <script type="text/javascript" src='../../../../package/index.js'></script>
-    <script>__render="2d"</script>
+    <script>__render="gl"</script>
     <script type="text/javascript" src='../init.js'></script>
     <script type="text/javascript" src='./common.js'></script>
     <script type="text/javascript" src='./static.js'></script>
