--- a/scratch/simple/index2.html
+++ b/scratch/simple/index2.html
@@ -36,7 +36,7 @@
         // console.log('hello')
       </script> -->
     <div id="asdf" style="font-family:open sans; font-size: 30px;">QWERTYUIOPASDFGHJKLZXCVBNMqwertyuiopasdfghjklzxcvbnm</div>
-    <div id="figureOneContainer" style="width: 800px; height: 800px; background-color: white;">
+    <div id="figureOneContainer" style="width: 1600px; height: 800px; background-color: white;">
     <!-- <script type="text/javascript" src='./fontfaceobserver.js'></script>     -->
     <!-- <script>
         var font = new FontFaceObserver('Open Sans');
@@ -45,8 +45,8 @@
             console.log('open Sans has loaded.');
         });
     </script> -->
-    <!-- <script type="text/javascript" src='https://cdn.jsdelivr.net/npm/figureone@0.13.0/figureone.min.js'></script> -->
-    <script type="text/javascript" src='../../package/index.js'></script>
+    <script type="text/javascript" src='https://cdn.jsdelivr.net/npm/figureone@0.13.0/figureone.min.js'></script>
+    <!-- <script type="text/javascript" src='../../package/index.js'></script> -->
     <!-- <script type="text/javascript" src='./navigator.js'></script> -->
     <script type="text/javascript" src='./index2.js'></script>
 </body>
