--- a/scratch/simple/index.html
+++ b/scratch/simple/index.html
@@ -48,7 +48,7 @@
         });
     </script> -->
     <!-- <script type="text/javascript" src='https://cdn.jsdelivr.net/npm/figureone@0.14.0/figureone.min.js'></script> -->
-    <script type="text/javascript" src='../../package/index.js'></script>
+    <script type="text/javascript" src='../package/index.js'></script>
     <!-- <script type="text/javascript" src='./navigator.js'></script> -->
     <script type="text/javascript" src='./index.js'></script>
 </body>
